Code updated (minor)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +13,7 @@
 
 <body>
     <div class="clock">
-        <!-- Numbres -->
+        <!-- Numbers -->
         <div class="num num1">
             <div>1</div>
         </div>
@@ -50,7 +51,7 @@
             <div>12</div>
         </div>
 
-        <!-- Aiguilles -->
+        <!-- clock hands -->
         <div class="hand" id="sec">
             <div class="sec"></div>
         </div>
@@ -66,4 +67,5 @@
     <!-- JS -->
     <script src="script.js"></script>
 </body>
+
 </html>
